# Hidrodinamics-real-time-simulator

./: .gitignore  CMakeLists.txt  README.md  analisis.ipynb
docs/: HydroSim.js  HydroSim.wasm  index.html
include/: analysis.h  renderer.h  solver.h  state.h
python/: analisis.ipynb  plots.py
src/: analysis.c  main.c  renderer.c  solver.c
